Fixed cut-off avatar hover in update-item on small screens

--- a/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
@@ -19,9 +19,6 @@
 
     .pu-update
         .pu-avatar
-            border: 5px solid $color-background
-            width: 50px
-            height: 50px
             margin: -5px
 
     .pu-sub-separator
