--- a/app/client/stylesheets/components/pu-footer.sass
+++ b/app/client/stylesheets/components/pu-footer.sass
@@ -42,15 +42,15 @@
                     text-decoration: underline
 
         &.pu-sub-description
-            width: 40%
+            width: 38%
             padding-right: 80px
 
         &.pu-sub-companylinks
-            width: 15%
+            width: 16%
             padding-right: 40px
 
         &.pu-sub-sociallinks
-            width: 15%
+            width: 16%
             padding-right: 40px
 
         &.pu-sub-feedback
